integrate and fire model

--- a/computationalneuroscience/tex/exam1.tex
+++ b/computationalneuroscience/tex/exam1.tex
@@ -1,4 +1,4 @@
-\title{Computational Neurophysiology - Assignment 3}
+\title{Computational Neurophysiology - Exam 1}
 \author{Ryan Spangler}
 \date{\today}
 
@@ -96,12 +96,6 @@ $$ E_{Ca}=12.5\cdot\ln\frac{2.1}{10^{-4}}=95.62 $$
 $$ E_{Ca}=12.5\cdot\ln\frac{2.091}{10^{-3}}=66.785 $$
 
 A reduction in potential of almost 30 mV.
-
-\section{4 - Cable properties}
-
-
-
-\section{5 - Compartmental models}
 
 
 
