--- a/computationalneuroscience/tex/exam2.tex
+++ b/computationalneuroscience/tex/exam2.tex
@@ -12,6 +12,16 @@
 \begin{document}
 \maketitle
 
+\section{3. Phase Plane Analysis}
+
+\subsection{A. Equilibrium}
+
+
+
+\subsection{B. Simulation}
+
+
+
 \section{4. Course Review}
 
 \subsection{A. Calcium Channels}
